deploy/ingress-app01.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app01-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app01.simpsonmfg.com 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app
            port:
              number: 5000
